--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -5,6 +5,8 @@ on:
     branches:
       - 'feature/*'
   pull_request:
+    types: 
+      - closed
     branches:
       - 'release/*'
 
@@ -12,8 +14,8 @@ jobs:
   build:
     runs-on: ubuntu-latest
     if: |
-       github.event_name == 'push' && startsWith(github.ref, 'refs/heads/feature/') || 
-       (github.event_name == 'pull_request' && github.event.action == 'closed' && github.event.pull_request.merged == true && startsWith(github.event.pull_request.base.ref, 'refs/heads/release/'))
+      github.event_name == 'push' && startsWith(github.ref, 'refs/heads/feature/') ||
+      (github.event_name == 'pull_request' && github.event.action == 'closed' && github.event.pull_request.merged == true && startsWith(github.event.pull_request.base.ref, 'release/'))
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
