--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -9,13 +9,15 @@ on:
       - closed
     branches:
       - 'release/*'
+      - 'main'
 
 jobs:
   build:
     runs-on: ubuntu-latest
     if: |
       github.event_name == 'push' && startsWith(github.ref, 'refs/heads/feature/') ||
-      (github.event_name == 'pull_request' && github.event.action == 'closed' && github.event.pull_request.merged == true && startsWith(github.event.pull_request.base.ref, 'release/'))
+      (github.event_name == 'pull_request' && github.event.action == 'closed' && github.event.pull_request.merged == true && startsWith(github.event.pull_request.base.ref, 'release/')) ||
+      (github.event_name == 'pull_request' && github.event.action == 'closed' && github.event.pull_request.merged == true && startsWith(github.event.pull_request.base.ref, 'main'))
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
