added branches in the push

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -4,12 +4,12 @@ on:
   push:
     branches:
       - 'feature/*'
+      - 'release/*'
+      - main
   pull_request:
-    types: 
-      - closed
     branches:
       - 'release/*'
-      - 'main'
+      # - main
 
 jobs:
   build:
