added branches in the push

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -7,9 +7,11 @@ on:
       - 'release/*'
       - main
   pull_request:
+    types: 
+      - closed
     branches:
       - 'release/*'
-      # - main
+      - main
 
 jobs:
   build:
