path ignore check

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,9 +1,12 @@
 name: mock CI/CD
 
 on:
+  
   push:
     branches:
       - 'feature/*'
+    paths-ignore:
+      - 'appfile.txt'
   pull_request:
     types: 
       - closed
