--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -4,10 +4,9 @@ on:
   push:
     branches:
       - 'feature/*'
-  pull_request:
+  pull_request_target:
     types: 
-      - synchronize
-      - open
+      - closed
     branches:
       - 'release/*'
       - main
